--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "barryvdh/laravel-debugbar": "^3.1",
         "fideloper/proxy": "^4.0",
-        "graham-campbell/exceptions": "^11.0",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.7.*",
         "laravel/scout": "^4.0",
         "laravel/socialite": "^3.0",
-        "laravel/tinker": "^1.0"
+        "laravel/telescope": "^1.0",
+        "laravel/tinker": "^1.0",
+        "tymon/jwt-auth": "^1.0.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.5",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
