--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "vue": "^2.5.17",
         "vue-router": "^3.0.2",
         "vuex": "^3.0.1"
+    },
+    "dependencies": {
+        "vuex-persist": "^2.0.0"
     }
 }
