--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
+        "laravel/horizon": "^3.2",
         "laravel/scout": "^4.0",
         "laravel/socialite": "^3.0",
         "laravel/telescope": "^1.0",
