--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "laravel/socialite": "^4.0",
         "laravel/telescope": "^2.0",
         "laravel/tinker": "^1.0",
+        "spatie/laravel-json-api-paginate": "^1.5",
+        "spatie/laravel-query-builder": "^1.17",
         "tymon/jwt-auth": "^1.0.0"
     },
     "require-dev": {
