--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "stylelint-config-standard": "^18.3.0",
         "stylelint-webpack-plugin": "^0.10.5",
         "sweetalert2": "^8.15.3",
+        "vee-validate": "^2.2.15",
         "vue": "^2.6.10",
         "vue-numeral-filter": "^1.1.1",
         "vue-router": "^3.0.6",
