Too much to itemise

--- a/.env.example
+++ b/.env.example
@@ -48,4 +48,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SCOUT_ELASTIC_HOST=localhost:15615
 SCOUT_DRIVER=elastic
 
-JWT_SECRET=vFa3W0euw3gUcSI1z2kBcgNlLqdFQEbw
+JWT_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
