--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "dev": "mix",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "mix --production",
+        "production": "mix --production"
     },
     "devDependencies": {
-        "@sweetalert2/theme-dark": "^4.0.0",
-        "axios": "^0.19",
-        "buefy": "^0.9.3",
+        "@sweetalert2/theme-dark": "^5.0",
+        "axios": "^0.21",
+        "buefy": "^0.9",
         "cross-env": "^7.0",
-        "eslint": "^7.11.0",
-        "eslint-plugin-vue": "^7.0.1",
-        "font-awesome": "^4.7.0",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.19",
-        "moment": "^2.29.1",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.27.0",
-        "sass-loader": "^8.0.2",
-        "stylelint": "^13.7.2",
-        "stylelint-config-standard": "^20.0.0",
-        "stylelint-webpack-plugin": "^2.1.0",
-        "sweetalert2": "^10.5.0",
-        "vee-validate": "^3.4.1",
-        "vue": "^2.6.12",
-        "vue-numeral-filter": "^2.0.0",
-        "vue-router": "^3.4.6",
-        "vue-template-compiler": "^2.6.12",
-        "vuex": "^3.5.1",
-        "vuex-persist": "^3.1.3"
+        "eslint": "^7.29",
+        "eslint-plugin-vue": "^7.11",
+        "laravel-mix": "^6.0",
+        "lodash": "^4.17",
+        "moment": "^2.29",
+        "postcss": "^8.3",
+        "resolve-url-loader": "^4.0",
+        "sass": "^1.35",
+        "sass-loader": "^12.0",
+        "stylelint": "^13.13",
+        "stylelint-config-standard": "^22.0",
+        "stylelint-webpack-plugin": "^2.2",
+        "sweetalert2": "^11.0",
+        "vee-validate": "^3.4",
+        "vue": "^2.6",
+        "vue-loader": "^15.9.7",
+        "vue-numeral-filter": "^2.0",
+        "vue-router": "^3.5",
+        "vue-template-compiler": "^2.6",
+        "vuex": "^3.6",
+        "vuex-persist": "^3.1"
     }
 }
